--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 .container {
     margin: 2.5% 10%;
-    padding: 10px 10px;
+    padding: 10px;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.6);
 }
