--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@ body {
     background-image: url('img/background.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position: center top;
 }
 
 .container {
-    margin: 2.5% 10%;
+    width: 95%;
+    max-width: 1700px;
+    margin: 2.5% auto;
     padding: 10px;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.6);
