Add vendor prefixes

--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,24 @@ body {
 }
 
 .info-section {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: center;
     align-items: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .icons {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
     display: flex;
+    -webkit-align-items: center;
     align-items: center;
 }
 
